# developer-portfolio

./: .gitignore  README.md  formatting_test_output.txt  output.csv  output.json  output.xlsx  performance_stats.json  production_stats.json  setup.py  test_results.txt
batch_rename/: CONTRIBUTING.md  README.md  cleanup_script.py  conftest.py  create_test_files.py  fix_tests.py  main.py  pytest.ini  quick_test_runner.py  requirements-test.txt  requirements.txt  run_tests.py
batch_rename/config/: __init__.py  config_loader.py  logging_config.py
batch_rename/core/: __init__.py  config.py  converters.py  extractors.py  filters.py  function_loader.py  logging_processor.py  (+5 more)
data_pipeline/: README.md  main.py  memory_visualization_demo.py  pytest.ini  requirements-dev.txt
shared_utils/: background_task_manager.py  dynamic_formatting.py  logger.py  logging.py  memory_monitor.py  memory_sparkline_widget.py  progress.py  structure.txt
shared_utils/stringsmith/: CHANGELOG.md  LICENSE  README.md  __init__.py  check_structure.py  debug_ansi_output.py  debug_inline.py  debug_simple.py  demo.py  examples.py  exceptions.py  formatter.py  formatting.py  inline_formatting.py  parsing.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  template_ast.py  test_runner.py  test_stringsmith.py  token_handlers.py
shared_utils/stringsmith/core/: __init__.py  ast.py  formatter.py  inline_formatting.py  parser.py
shared_utils/stringsmith/docs/: cheatsheet.md
shared_utils/stringsmith/tests/: __init__.py  conftest.py  test_basic.py  test_formatting.py
shared_utils/stringsmith/tokens/: __init__.py  base.py  color.py  conditional.py  emphasis.py  literal.py  registry.py
shared_utils/stringsmith/utils/: __init__.py  ansi.py
test_files/: FINANCE_budget_Q3_2024.xlsx  Finance_Report_draft.xlsx  HR_memo_20240916.docx  PROJECT_notes_2.docx  backup_data_old.bak  marketing_Brief_v1.docx  temp_file.tmp
(+191 files in other folders)
