[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringsmith"
version = "0.1.0"
description = "Advanced template formatting with conditional sections and inline formatting"
authors = [{name = "Krishna R Jain", email = "krishna@krishnajain.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["template", "formatting", "string", "conditional", "ansi", "colors", "logging"]

[project.optional-dependencies]
colors = ["rich>=10.0.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "isort>=5.0.0",
    "mypy>=0.800",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stringsmith*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=stringsmith --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["stringsmith"]
branch = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true